# flintvesting

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: flintdev.agent.md
src/: main.py
src/backtest/: backtest.py
src/data/: load_data.py
src/features/: feature_engineering.py
src/models/: train.py
