[project]
name = "strategies-ml-trading"
version = "0.1.0"
description = "Projekt implementujący strategie inwestycyjne oparte na uczeniu maszynowym i uczeniu wzmocnionym."
authors = ["Autor <autor@example.com>"]
requires-python = ">=3.11"

[project.dependencies]
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.3"
xgboost = "^1.8"
tensorflow = "^2.15"
stable-baselines3 = "^2.0"
ta = "^0.12"
matplotlib = "^3.8"
seaborn = "^0.13"
yfinance = "^0.2"
joblib = "^1.3"
jupyterlab = "^4.0"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
